166816209-feature(article, ratings, user, helpers, utils): rate article - add rating model - add article rating controller - add validations - add  unit integration tests - add documentation [Delivers #166816209]
