# controllers/articles/index.js
@@ -1,3 +1,6 @@
+import { decodeToken } from '../../utils';
+import db from '../../db/models';
+
 export default {
   createArticle: async (req, res) => {
     const {
@@ -23,4 +26,40 @@ export default {
       });
     }
   },
+  rateArticle: async (req, res) => {
+    const token = req.headers['x-access-token'];
+    const decodedToken = decodeToken(token);
+    const { articleId } = req.params;
+    const { rate } = req.body;
+    const { id } = decodedToken;
+    try {
+      const checkRating = await db.Ratings.findOne({
+        where: {
+          userId: id,
+          articleId
+        }
+      });
+      if (checkRating) {
+        checkRating.update({
+          stars: rate
+        });
+        return res.status(200).json({
+          message: 'Rating updated successfully'
+        });
+      }
+      const rating = await req.user.createRate({
+        articleId,
+        stars: rate
+      });
+      return res.status(201).json({
+        message: 'Article rated successfully',
+        rating,
+      });
+    } catch (e) {
+      return res.status(500).json({
+        message: 'Something went wrong',
+        error: e.message
+      });
+    }
+  }
 };
