# validators/articles/index.js
@@ -20,4 +20,17 @@ export default {
       });
     }
   },
+  rateArticle: async (req, res, next) => {
+    const rule = {
+      rate: 'required|integer|range:0,6',
+    };
+    try {
+      await validatorInstance.validateAll(req.body.rate, rule, messages);
+      next();
+    } catch (e) {
+      return res.status(400).json({
+        message: e,
+      });
+    }
+  }
 };
